# spinta

./: .drone.yml  .editorconfig  .env.example  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  CHANGES.rst  Dockerfile  HACKING.rst  LICENSE  Makefile  README.rst  analysis.MD  demo.md  docker-compose.dev.yml  docker-compose.nginx.yml  docker-compose.template.internal.yml  docker-compose.template.yml  docker-compose.yml  dsa.csv  entrypoint-external.sh  entrypoint-internal.sh  entrypoint.sh  example.xml  manifest.csv  manifest.txt  pavyzdys.xlsx  production.Dockerfile  pylsp-mypy.cfg  pyproject.toml  rc1291.xsd  rc249jadis-israsas.xsd  rc437.xsd  rc588.xsd  rc722.xsd  rc729.xsd  rc730.xsd  rc765.xsd  (+7 more)
.ai_context/: gemini_todos.md  index.md
.docker/citus-postgis/: Dockerfile
.github/ISSUE_TEMPLATES/: user_story.yml
.github/workflows/: code_check.yml  test.yml  test_linux_py_matrix.yml
docs/: Makefile  conf.py  index.rst  requirements.in  requirements.txt
docs/contrib/: git-flow.rst  index.rst  issues.rst  setup.rst  tests.rst
docs/en/: .readthedocs.yaml  conf.py  hacking.rst  index.rst
docs/lt/: .readthedocs.yaml  conf.py  index.md  index.rst
docs/manual/: access.rst  accesslog.rst  index.rst  migrations.rst  rql.rst
docs/reference/: commands.rst  components.rst
dsas/: dsa_ar_with_coordinates_new.csv
experiments/: streaming.py
nginx/: Dockerfile  dev.Dockerfile  internal.Dockerfile  nginx-dev.conf  nginx-internal.conf  nginx.conf
notes/: ddd.md  docker.sh  keymap.sh  postgres.sh  sqlite.sh  wipe.sh
notes/access/: public.sh
notes/api/: inspect.sh
notes/changes/: singleobject.sh
notes/cli/: inspect.sh  migrate.sh  push.sh  push_old_366.sh
notes/comments/: part-remove.py
notes/comments_scripts/: bring_back_enum_nested.py  bring_back_language_tags.py  notes.sh  remove_language_tag_nested.py  remove_money_type.py  remove_part.py  remove_ref_with_dot.py  remove_ref_with_dot_prepare.py  remove_spaces_column_names.py
notes/datasets/: csv.sh  json.sh  xml.sh
notes/dimensions/: base.sh  dataset.sh  param.sh
notes/formats/: ascii.sh  rdf.sh
notes/manifests/: internal.sh  json.sh  rdf.sh  xsd.py  xsd.sh
notes/metadata/: null.sh  unique.sh
notes/push/: base.sh  delete.sh  exitcode.sh  external.sh  includes.sh  page.sh  pbar.sh  sync.sh
notes/query/: id.sh  revision.sh
notes/spinta/: client.sh  push.sh  release.sh  server.sh
notes/summary/: numeric.sh
notes/testing/: spinta_push_testing.txt
notes/types/: array.sh  backref.sh  denorm.sh  geometry.sh  text.sh
notes/ufuncs/: swap.sh
notes/xpath_examples/: different-models-or-properties-same-xml-element.md
requirements/: spinta-0.1.85.txt  spinta-0.2dev10.txt  spinta-0.2dev11.txt  spinta-0.2dev12.txt  spinta-0.2dev13.txt  spinta-0.2dev14.txt  spinta-0.2dev15.txt  spinta-0.2dev16.txt  spinta-0.2dev17.txt  spinta-0.2dev18.txt  spinta-0.2dev19.txt  spinta-0.2dev20.txt  spinta-0.2dev21.txt  spinta-0.2dev22.txt  spinta-0.2dev23.txt  spinta-0.2dev24.txt  spinta-0.2dev25.txt  spinta-0.2dev27.txt  spinta-0.2dev8.txt  spinta-0.2dev9.txt  spinta-latest-pre.txt  spinta-latest.txt
scripts/: copy-csv-models  generate_manifest_viz.py  new-release
scripts/dsa_fix_scripts/: add_back_part.py  add_xml_namespace.ipynb  bring_back_enum_nested.py  bring_back_from_comments.py  bring_back_language_tags.py  count_model_values.py  count_question_mark_models.py  notes.sh  quotation_marks_fix.py  remove_backref_ref_column_brackets_1459.py  remove_getone_getall_927.py  remove_language_tag_nested_1289.py  remove_language_tag_nested_1339.py  remove_money_type_40.py  remove_part.py  remove_part_997.py  remove_ref_required_1313.py  remove_ref_with_dot.py  remove_ref_with_dot_981.py  remove_ref_with_dot_prepare.py  remove_ref_with_dot_prepare_981.py  remove_ref_with_square_brackets_1451.py  remove_ref_with_square_brackets_prepare_1309.py  remove_spaces_column_names.py  remove_underscore_property_name.py  remove_underscore_property_name_963.py  script_to_remove_doted_refs.py  script_to_remove_refs.py  trim_csv_spaces.py  uri_analysis.py
scripts/xml/: split_xmls.py
spinta/: __init__.py  __main__.py  api.py  asgi.py  auth.py  boot.py  cli.py  client.py  commands.py  common.py  compat.py  components.py  config.py  config.yml  dispatcher.py  exceptions.py  fetcher.py  handlers.py  logging_config.py  middlewares.py  migrations.py  models.py  nodes.py  renderer.py  spyna.py  store.py  typing.py  ufuncs.py  urlparams.py
spinta/accesslog/: __init__.py  file.py  python.py
spinta/adapters/: loaders.py  rc_signature_adapter.py  soap_plugins.py
spinta/api/: __init__.py  inspect.py  schema.py  validators.py
spinta/backends/: __init__.py  asyncpg.py  base.py  components.py  constants.py  fs.py  helpers.py  inmemory.py  mongo.py  postgresql.py  s3.py
spinta/cli/: __init__.py  admin.py  auth.py  client.py  comment.py  config.py  contract.py  data.py  get.py  grep.py  init.py  inspect.py  keymap.py  main.py  manifest.py  migrate.py  pii.py  pull.py  push.py  server.py  show.py  sync.py  token.py  uncomment.py  upgrade.py
spinta/commands/: __init__.py  auth.py  helpers.py  manifest.py  read.py  search.py  transform.py  ufuncs.py  version.py  write.py
spinta/components/: core.py  datasets.py  manifests.py  models.py
spinta/config/: __init__.py
tests/: conftest.py  test_access.py  test_accesslog.py  test_api.py  test_auth.py  test_cache.py  test_changes.py  test_checks.py  test_cli.py  test_client.py  test_commands.py  test_components.py  test_concurency.py  test_config.py  test_context.py  test_exceptions.py  test_file_permissions.py  test_freeze.py  test_handlers.py  test_inspect.py  test_joins.py  test_manifests.py  test_migrations.py  test_models.py  test_multihost.py  test_namespace.py  test_nestedprops.py  test_pii.py  test_prepare.py  test_pull.py  test_push.py  test_schema.py  test_search.py  test_sort.py  test_spyna.py  test_store.py  test_subresources.py  test_sync.py  test_ufuncs.py  test_upgrade.py  (+3 more)
uml/: class_relations.puml  commands.puml  components.puml
(+1224 files in other folders)
