[tool.poetry]
name = "spinta"
version = "0.2.dev4"
description = "A platform for describing, extracting, transforming, loading and serving open data."
authors = ["Mantas Zimnickas <sirexas@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/atviriduomenys/spinta"
repository = "https://github.com/atviriduomenys/spinta"
documentation = "https://spinta.readthedocs.io/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Database :: Front-Ends",
]
packages = [
    { include = "spinta" },
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/atviriduomenys/spinta/issues"


[tool.poetry.scripts]
spinta = "spinta.cli.main:app"


[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "*"
authlib = "~0.11"
jinja2 = "*"
jsonpatch = "*"
lark-parser = "*"
msgpack = "*"
multipledispatch = "*"
python-multipart = "*"
pytz = "*"
requests = "*"
"ruamel.yaml" = "*"
# FIXME: https://setuptools.readthedocs.io/en/latest/history.html#v58-0-0
#        simpleeval package uses use_2to3 thus it is not compatbile with
#        setuptools>=58
setuptools = "*"
setuptools-scm = "*"
# https://github.com/encode/starlette/security/advisories/GHSA-f96h-pmfr-66vw
starlette = ">=0.40"
pydantic = "*"
toposort = "*"
tqdm = "*"
ujson = "*"
unidecode = "*"
sqlparse = "*"
pprintpp = "*"
rdflib = "*"
numpy = "*"

# CLI tool
click = "*"
typer = { version = "*", extras = ["all"] }

# API server dependencies
gunicorn = { version = "*", optional = true }
uvicorn = { version = "*", optional = true }

# PostgreSQL backend dependencies
alembic = { version = "~1.11.0", optional = true }
asyncpg = "*"
psycopg2-binary = "*"
# FIXME: https://github.com/python-poetry/poetry/issues/4402
# sqlalchemy = "~1.4"
sqlalchemy = "~1.4"
# https://github.com/kvesteri/sqlalchemy-utils/issues/472
sqlalchemy-utils = "*"

# Mongo backend dependendencies
# https://github.com/atviriduomenys/spinta/issues/806
pymongo = "<=4.8.0"

# Excel dependencies
xlrd = "*"

# XML format dependencies
lxml = "*"

# PII (Person Identifiable Information) dependencies
phonenumbers = "*"

# Other dependencies
XlsxWriter = "*"
openpyxl = "*"
GeoAlchemy2 = "*"
Shapely = "*"
aiohttp = "*"
fsspec = "*"
dask = { version = "*", extras = ["dataframe"] }
psutil = "*"
tabulate = "*"
pyproj = [{version = ">=3.7.0", python = ">=3.13"}, {version = "3.6.1", python = "<3.13"}]
xmltodict = "*"
sqlean-py = "*"
cachetools = "*"
docutils = "^0.21.2"
zeep = "^4.3.1"

[tool.poetry.extras]
http = ["gunicorn", "uvicorn"]
migrations = ["alembic"]
all = ["gunicorn", "uvicorn", "alembic"]


[tool.poetry.group.dev.dependencies]
ipdb = "*"
ipython = "*"
pp-ez = "*"
pytest = "~7"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-mock = "*"
responses = "*"
snoop = "*"
python-dotenv = "*"
docutils = "*"
requests-mock = "^1.11.0"
ruff = "^0.12.10"

# Starlette
httpx = "*"

# Docs
sphinx = "*"
sphinx-autobuild = "*"
sphinxcontrib-httpdomain = "*"
memory-profiler = "*"
mypy = "*"
cssselect = "*"
objprint = "*"
sphinx-rtd-theme = "*"
sqlalchemy-stubs = "*"
types-requests = "^2.32.4.20250809"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[tool.mypy]
disallow_any_unimported = true
show_error_codes = true
check_untyped_defs = true
plugins = "sqlmypy"


[tool.ruff]
line-length = 120


[tool.ruff.format]
quote-style = "double"


[tool.ruff.lint]
ignore = ["F811"]
