[tool.poetry]
name = "spinta"
version = "0.2dev11"
description = "A platform for describing, extracting, transforming, loading and serving open data."
authors = ["Mantas Zimnickas <sirexas@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/atviriduomenys/spinta"
repository = "https://github.com/atviriduomenys/spinta"
documentation = "https://spinta.readthedocs.io/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Database :: Front-Ends",
]
packages = [
    { include = "spinta" },
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/atviriduomenys/spinta/issues"


[tool.poetry.scripts]
spinta = "spinta.cli.main:app"


[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "*"
# https://github.com/atviriduomenys/spinta/issues/675
# 0.x -> 1.x upgrade changed their implementation API, so we can no longer support 0.x.
authlib = ">=1.0.0"
jinja2 = "*"
jsonpatch = "*"
lark-parser = "*"
msgpack = "*"
multipledispatch = "*"
python-multipart = "*"
pytz = "*"
requests = "*"
"ruamel.yaml" = "*"
# FIXME: https://setuptools.readthedocs.io/en/latest/history.html#v58-0-0
#        simpleeval package uses use_2to3 thus it is not compatbile with
#        setuptools>=58
setuptools = "*"
setuptools-scm = "*"
# https://github.com/encode/starlette/security/advisories/GHSA-f96h-pmfr-66vw
starlette = ">=0.49.1"
pydantic = "*"
toposort = "*"
tqdm = "*"
ujson = "*"
unidecode = "*"
sqlparse = "*"
pprintpp = "*"
rdflib = "*"
numpy = "*"

# CLI tool
click = "*"
typer = { version = "*", extras = ["all"] }

# API server dependencies
gunicorn = { version = "*", optional = true }
uvicorn = { version = "*", optional = true }

# PostgreSQL backend dependencies
alembic = { version = "~1.11.0", optional = true }
asyncpg = "*"
psycopg2-binary = "*"
# FIXME: https://github.com/python-poetry/poetry/issues/4402
# sqlalchemy = "~1.4"
sqlalchemy = "~1.4"
# https://github.com/kvesteri/sqlalchemy-utils/issues/472
# https://github.com/kvesteri/sqlalchemy-utils/issues/791
sqlalchemy-utils = "<=0.41.2"

# Mongo backend dependendencies
# https://github.com/atviriduomenys/spinta/issues/806
pymongo = "<=4.8.0"

# Excel dependencies
xlrd = "*"

# XML format dependencies
lxml = "*"

# PII (Person Identifiable Information) dependencies
phonenumbers = "*"

# Other dependencies
XlsxWriter = "*"
openpyxl = "*"
GeoAlchemy2 = "*"
Shapely = "*"
aiohttp = "*"
fsspec = "*"
dask = { version = "*", extras = ["dataframe"] }
psutil = "*"
tabulate = "*"
pyproj = [{version = ">=3.7.0", python = ">=3.13"}, {version = "3.6.1", python = "<3.13"}]
xmltodict = "*"
# Error when trying to install >=3.50
sqlean-py = "<=3.49.1"
cachetools = "*"
docutils = "^0.21.2"
zeep = "^4.3.1"
redis = "^6.4.0"

[tool.poetry.extras]
http = ["gunicorn", "uvicorn"]
migrations = ["alembic"]
all = ["gunicorn", "uvicorn", "alembic"]


[tool.poetry.group.dev.dependencies]
ipdb = "*"
ipython = "*"
pp-ez = "*"
pytest = "~7"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-mock = "*"
responses = "*"
snoop = "*"
python-dotenv = "*"
docutils = "*"
requests-mock = "^1.11.0"
ruff = "^0.12.10"

# Starlette
httpx = "*"

# Docs
sphinx = "*"
sphinx-autobuild = "*"
sphinxcontrib-httpdomain = "*"
memory-profiler = "*"
mypy = "*"
cssselect = "*"
objprint = "*"
sphinx-rtd-theme = "*"
sqlalchemy-stubs = "*"
types-requests = "^2.32.4.20250809"
fakeredis = "^2.32.0"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[tool.mypy]
disallow_any_unimported = true
show_error_codes = true
check_untyped_defs = true
plugins = "sqlmypy"


[tool.ruff]
line-length = 120


[tool.ruff.format]
quote-style = "double"


[tool.ruff.lint]
ignore = ["F811"]
